--- a/src/App.css
+++ b/src/App.css
@@ -1,115 +1,265 @@
 .App {
-  text-align: center;
-  background-color: #f1f1f1;
-}
+    text-align: center;
+    background-color: #f1f1f1;
+  }
+  
+  .App-nav {
+    background-color: #333;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .nav-button {
+    background-color: transparent;
+    border: none;
+    color: #fff;
+    font-size: 1rem;
+    padding: 10px 20px;
+    margin: 0 10px;
+    cursor: pointer;
+  }
+  
+  .nav-button:hover {
+    background-color: #fff;
+    color: #333;
+    border-radius: 4px;
+  }
+  
+  
+  .App-header {
+    padding: 20px;
+    background-color: #333;
+    color: #fff;
+  }
+  
+  .App-main {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+  }
+  
+  h1 {
+    font-size: 2.5rem;
+    margin-bottom: 10px;
+  }
+  
+  h2 {
+    font-size: 1.5rem;
+    margin-bottom: 30px;
+  }
+  
+  section {
+    margin-bottom: 30px;
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  }
+  
+  h3 {
+    font-size: 1.8rem;
+    margin-bottom: 10px;
+    color: #333;
+  }
+  
+  p {
+    font-size: 1.2rem;
+    color: #666;
+    line-height: 1.5;
+  }
+  
+  a {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #333;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 4px;
+    font-size: 1.2rem;
+    margin-top: 10px;
+  }
+  
+  .App-footer {
+    padding: 20px;
+    background-color: #333;
+    color: #fff;
+    font-size: 1.2rem;
+  }
+  
+  .Education {
+    text-align: center;
+    margin-top: 30px;
+  }
+  
+  .Experience {
+    text-align: center;
+    margin-top: 30px;
+  }
+  
+  
+  .Skills {
+    text-align: center;
+    margin-top: 30px;
+  }
 
-.App-nav {
-  background-color: #333;
-  padding: 10px;
-  display: flex;
-  justify-content: center;
-}
+  .navbar-logo{
+    padding: 15px;
+    color: #fff;
+  }
+  .navbar-mainbg{
+    background-color: #5161ce;
+    padding: 0px;
+  }
+  #navbarSupportedContent{
+    overflow: hidden;
+    position: relative;
+  }
+  #navbarSupportedContent ul{
+    padding: 0px;
+    margin: 0px;
+  }
+  #navbarSupportedContent ul li a i{
+    margin-right: 10px;
+  }
+  #navbarSupportedContent li {
+    list-style-type: none;
+    float: left;
+  }
+  #navbarSupportedContent ul li a{
+    color: rgba(255,255,255,0.5);
+      text-decoration: none;
+      font-size: 15px;
+      display: block;
+      padding: 20px 20px;
+      transition-duration:0.6s;
+    transition-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
+      position: relative;
+  }
+  #navbarSupportedContent>ul>li.active>a{
+    color: #5161ce;
+    background-color: transparent;
+    transition: all 0.7s;
+  }
+  #navbarSupportedContent a:not(:only-child):after {
+    content: "\f105";
+    position: absolute;
+    right: 20px;
+    top: 10px;
+    font-size: 14px;
+    font-family: "Font Awesome 5 Free";
+    display: inline-block;
+    padding-right: 3px;
+    vertical-align: middle;
+    font-weight: 900;
+    transition: 0.5s;
+  }
+  #navbarSupportedContent .active>a:not(:only-child):after {
+    transform: rotate(90deg);
+  }
+  .hori-selector{
+    display:inline-block;
+    position:absolute;
+    height: 100%;
+    top: 0px;
+    left: 0px;
+    transition-duration:0.6s;
+    transition-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    background-color: #fff;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    margin-top: 10px;
+  }
+  .hori-selector .right,
+  .hori-selector .left{
+    position: absolute;
+    width: 25px;
+    height: 25px;
+    background-color: #fff;
+    bottom: 10px;
+  }
+  .hori-selector .right{
+    right: -25px;
+  }
+  .hori-selector .left{
+    left: -25px;
+  }
+  .hori-selector .right:before,
+  .hori-selector .left:before{
+    content: '';
+      position: absolute;
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      background-color: #5161ce;
+  }
+  .hori-selector .right:before{
+    bottom: 0;
+      right: -25px;
+  }
+  .hori-selector .left:before{
+    bottom: 0;
+      left: -25px;
+  }
+  
+  
+  @media(min-width: 992px){
+    .navbar-expand-custom {
+        -ms-flex-flow: row nowrap;
+        flex-flow: row nowrap;
+        -ms-flex-pack: start;
+        justify-content: flex-start;
+    }
+    .navbar-expand-custom .navbar-nav {
+        -ms-flex-direction: row;
+        flex-direction: row;
+    }
+    .navbar-expand-custom .navbar-toggler {
+        display: none;
+    }
+    .navbar-expand-custom .navbar-collapse {
+        display: -ms-flexbox!important;
+        display: flex!important;
+        -ms-flex-preferred-size: auto;
+        flex-basis: auto;
+    }
+  }
+  
+  
+  @media (max-width: 991px){
+    #navbarSupportedContent ul li a{
+      padding: 12px 30px;
+    }
+    .hori-selector{
+      margin-top: 0px;
+      margin-left: 10px;
+      border-radius: 0;
+      border-top-left-radius: 25px;
+      border-bottom-left-radius: 25px;
+    }
+    .hori-selector .left,
+    .hori-selector .right{
+      right: 10px;
+    }
+    .hori-selector .left{
+      top: -25px;
+      left: auto;
+    }
+    .hori-selector .right{
+      bottom: -25px;
+    }
+    .hori-selector .left:before{
+      left: -25px;
+      top: -25px;
+    }
+    .hori-selector .right:before{
+      bottom: -25px;
+      left: -25px;
+    }
+  }
 
-.nav-button {
-  background-color: transparent;
-  border: none;
-  color: #fff;
-  font-size: 1rem;
-  padding: 10px 20px;
-  margin: 0 10px;
-  cursor: pointer;
-}
-
-.nav-button:hover {
-  background-color: #fff;
-  color: #333;
-  border-radius: 4px;
-}
-
-/* Rest of the styles remain the same */
-
-
-.App-header {
-  padding: 20px;
-  background-color: #333;
-  color: #fff;
-}
-
-.App-main {
-  max-width: 800px;
-  margin: 0 auto;
-  padding: 20px;
-}
-
-h1 {
-  font-size: 2.5rem;
-  margin-bottom: 10px;
-}
-
-h2 {
-  font-size: 1.5rem;
-  margin-bottom: 30px;
-}
-
-section {
-  margin-bottom: 30px;
-  padding: 20px;
-  background-color: #fff;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-}
-
-h3 {
-  font-size: 1.8rem;
-  margin-bottom: 10px;
-  color: #333;
-}
-
-p {
-  font-size: 1.2rem;
-  color: #666;
-  line-height: 1.5;
-}
-
-a {
-  display: inline-block;
-  padding: 10px 20px;
-  background-color: #333;
-  color: #fff;
-  text-decoration: none;
-  border-radius: 4px;
-  font-size: 1.2rem;
-  margin-top: 10px;
-}
-
-.App-footer {
-  padding: 20px;
-  background-color: #333;
-  color: #fff;
-  font-size: 1.2rem;
-}
-
-/* Existing styles */
-
-.Education {
-  text-align: center;
-  margin-top: 30px;
-}
-
-/* Rest of the styles remain the same */
-/* Existing styles */
-
-.Experience {
-  text-align: center;
-  margin-top: 30px;
-}
-
-/* Rest of the styles remain the same */
-
-/* Existing styles */
-
-.Skills {
-  text-align: center;
-  margin-top: 30px;
-}
-
-/* Rest of the styles remain the same */
+  .button-container {
+    display: flex; /* Use flexbox for horizontal layout */
+    justify-content: space-between; /* Distribute space evenly between buttons */
+    gap: 0px; /* Add some spacing between buttons */
+  }
+  
